--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tuli-subgraph-mainnet",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "scripts": {
+    "make-badges": "istanbul-badges-readme --coverageDir=./coverage",
     "seed-graph": "ts-node scripts/seed",
     "deploy-contracts": "ts-node scripts/deploy.ts",
     "prepare:mainnet": "mustache config/1.json subgraph.template.yaml > subgraph.yaml",
@@ -14,8 +15,7 @@
     "test": "jest",
     "codegen": "graph codegen --output-dir types",
     "build": "graph build",
-    "deploy": "graph deploy bitbd83/tulisubpolygon --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
-    "deploy-local": "graph deploy sporkspatula/tuli-v1-subgraph --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
+    "deploy": "graph deploy bitbd83/tulisubbsc --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
     "runAuction": "ts-node scripts/auctionHouse.ts"
   },
   "devDependencies": {
@@ -23,16 +23,17 @@
     "@fleekhq/fleek-storage-js": "^1.0.9",
     "@graphprotocol/graph-cli": "^0.18.0",
     "@graphprotocol/graph-ts": "^0.18.0",
+    "@tulilabs/core": "^1.1.2",
+    "@tulilabs/tdk": "^1.1.3",
     "@types/jest": "^26.0.15",
     "@types/sjcl": "^1.0.29",
-    "@tulilabs/core": "^1.1.0",
-    "@tulilabs/tdk": "^1.1.2",
     "axios": "^0.21.0",
     "axios-retry": "^3.1.9",
     "dotenv": "^8.2.0",
     "ethers": "^5.0",
     "ganache-cli": "^6.12.2",
     "graphql-request": "^3.3.0",
+    "istanbul-badges-readme": "^1.2.0",
     "jest": "^26.6.3",
     "jest-serial-runner": "^1.1.0",
     "mustache": "^4.1.0",
